# FMCB

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  STYLE.md  build.bat  info.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
Factorio/FMCB/: control.lua  data.lua  info.json
Factorio/FMCB_0.0.1/: Bridge.cpp  control.lua  data.lua  info.json
Factorio/FMCB_0.0.1/prototypes/: genericSend.lua
Factorio/FMCBtest_0/: control.lua  info.json
Factorio/FMCBtest_0.0.0/: control.lua  info.json
Minecraft/: CMakeLists.txt
Minecraft/FMCB/: build.bat  build.gradle  move.bat  target.bat
Minecraft/FMCB/src/main/java/: EventHandler.java  FMCB.java  NetworkHandler.java
Minecraft/FMCB/src/main/java/block/: BlockGeneral.java
Minecraft/FMCB/src/main/java/fmcb/: EventHandler.java  FMCB.java
Minecraft/FMCB/src/main/java/fmcb/block/: BlockGeneral.java
Minecraft/FMCB/src/main/java/fmcb/init/: ModBlocks.java  ModItems.java
Minecraft/FMCB/src/main/java/fmcb/item/: ItemGeneral.java
Minecraft/FMCB/src/main/java/fmcb/side/client/: ClientProxy.java
Minecraft/FMCB/src/main/java/fmcb/side/server/: ServerProxy.java
Minecraft/FMCB/src/main/java/fmcb/util/: NetworkUtils.java
Minecraft/FMCB/src/main/java/init/: ModBlocks.java  ModItems.java
Minecraft/FMCB/src/main/java/item/: ItemGeneral.java
Minecraft/FMCB/src/main/java/items/: ItemBruj.java
Minecraft/FMCB/src/main/java/side/client/: ClientProxy.java
Minecraft/FMCB/src/main/java/side/server/: MemoryUtils.java  ServerProxy.java  main_java_side_server_MemoryUtils.cpp  main_java_side_server_MemoryUtils.h
Minecraft/FMCB/src/main/java/util/: Compile.bat  MemoryUtils.cpp  MemoryUtils.h  MemoryUtils.java  NetworkUtils.java  main_java_util_MemoryUtils.cpp  main_java_util_MemoryUtils.h
Minecraft/FMCB/src/main/resources/: mcmod.info  pack.mcmeta
Minecraft/FMCB/src/main/resources/assets/fmcb/blockstates/: bruh.json
Minecraft/FMCB/src/main/resources/assets/fmcb/lang/: en_us.lang
Minecraft/FMCB/src/main/resources/assets/fmcb/models/block/: bruh.json
Minecraft/FMCB/src/main/resources/assets/fmcb/models/item/: bruh.json  bruj.json
Minecraft/FMCB/src/main/resources/assets/fmcb/models/items/: bruj.json
Minecraft/FMCB/src/main/resources/assets/palettes/: fmcb-mc-sprite.aseprite  fmcb-mc.aseprite
Shared/: BufferAccess.cpp  BufferAccess.h
client/: CMakeLists.txt  Global.h
client/memory/: BufferAccess.cpp  BufferAccess.h
client/register/: Register.cpp  Register.h
client/wrapper/: CMakeLists.txt
client/wrapper/Java/: CMakeLists.txt  fmcb_Memory.h  fmcb_Register.cpp
client/wrapper/Java/fmcb/: Register.java
client/wrapper/Lua/: CMakeLists.txt  FMCB.lua  Memory.c  Memory.h
core/: CMakeLists.txt  Core.cpp  Global.h  Info.h.in
core/client/: ClientAccess.h
core/data/: CoreDatabase.cpp  Database.cpp  Database.h  LinkedArray.h  Protocal.h
core/data/util/: ExtInt.h
core/processing/: CScheduler.cpp  CScheduler.h
core/processing/modules/translate/: Translate.cpp  Translate.h
core/registration/: PipeServer.cpp  PipeServer.h  Register.cpp  Register.h
libraries/minparse-0.1.0-alpha/: minparse.h
libraries/minparse-1.0.0-prerelease/: minparse.h
resources/project/: Compile.bat  ErrorHandling.gv
server/: CMakeLists.txt  Status.cpp  Status.h
server/data/: Database.h
server/processing/modules/translate/: Translate.h
server/registration/: PipeServer.cpp  PipeServer.h  Register.cpp
shared/: CMakeLists.txt  Global.cpp
shared/memory/: BufferAccess.cpp  BufferAccess.h  CMakeLists.txt  Global.h
shared/memory/Java/: CMakeLists.txt  Memory.cpp  Memory.h  Memory.java
shared/protocol/: Protocol.h
shared/register/: Register.cpp  Register.h
shared/wrapper/: CMakeLists.txt
shared/wrapper/Java/: CMakeLists.txt  Memory.java  fmcb_Memory.cpp  fmcb_Memory.h  fmcb_Register.h  generateHeaders.bat
shared/wrapper/Java/fmcb/: Memory.java  Register.java
tests/: CMakeLists.txt
tests/linkedarray/: CMakeLists.txt  Run.cpp
tests/subsystem/: CMakeLists.txt  Run.cpp
tests/wrapper/java/: CMakeLists.txt  Run.java
